<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="53dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/image_btn"
                android:layout_width="360dp"
                android:layout_height="145dp"
                android:layout_margin="10dp"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="26dp">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="28dp"
                    android:contentDescription="@string/enter_how_much_cookies_you_want"
                    android:scaleType="fitCenter"
                    android:src="@drawable/megumin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

                <TextView
                    android:layout_width="224dp"
                    android:layout_height="63dp"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="28dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/Megumin"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/add1"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="230dp"
                    android:layout_marginTop="90dp"
                    android:text="@string/add_to_cart"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/image_btn2"
                android:layout_width="360dp"
                android:layout_height="145dp"
                android:layout_margin="10dp"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="26dp">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="28dp"
                    android:contentDescription="@string/enter_how_much_cookies_you_want"
                    android:scaleType="fitCenter"
                    android:src="@drawable/mona"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

                <TextView
                    android:layout_width="226dp"
                    android:layout_height="101dp"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="28dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/Mona"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/add2"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="230dp"
                    android:layout_marginTop="90dp"
                    android:text="@string/add_to_cart"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/image_btn3"
                android:layout_width="360dp"
                android:layout_height="145dp"
                android:layout_margin="10dp"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="26dp">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="28dp"
                    android:contentDescription="@string/enter_how_much_cookies_you_want"
                    android:scaleType="fitCenter"
                    android:src="@drawable/megumin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

                <TextView
                    android:layout_width="226dp"
                    android:layout_height="101dp"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="28dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/Megumin"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/add3"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="230dp"
                    android:layout_marginTop="90dp"
                    android:text="@string/add_to_cart"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/image_btn4"
                android:layout_width="360dp"
                android:layout_height="145dp"
                android:layout_margin="10dp"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="26dp">

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="28dp"
                    android:contentDescription="@string/enter_how_much_cookies_you_want"
                    android:scaleType="fitCenter"
                    android:src="@drawable/mona"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

                <TextView
                    android:layout_width="226dp"
                    android:layout_height="101dp"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="28dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/Mona"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/add4"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="230dp"
                    android:layout_marginTop="90dp"
                    android:text="@string/add_to_cart"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/image_btn5"
                android:layout_width="360dp"
                android:layout_height="145dp"
                android:layout_margin="10dp"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="26dp">

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="28dp"
                    android:contentDescription="@string/enter_how_much_cookies_you_want"
                    android:scaleType="fitCenter"
                    android:src="@drawable/nezuko"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

                <TextView
                    android:layout_width="226dp"
                    android:layout_height="101dp"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="28dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/Nezuko"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/add5"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="230dp"
                    android:layout_marginTop="90dp"
                    android:text="@string/add_to_cart"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/image_btn6"
                android:layout_width="360dp"
                android:layout_height="145dp"
                android:layout_margin="10dp"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="26dp">

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="28dp"
                    android:contentDescription="@string/enter_how_much_cookies_you_want"
                    android:scaleType="fitCenter"
                    android:src="@drawable/princess"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

                <TextView
                    android:layout_width="226dp"
                    android:layout_height="101dp"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="28dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/princess"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/add6"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="230dp"
                    android:layout_marginTop="90dp"
                    android:text="@string/add_to_cart"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/image_btn7"
                android:layout_width="360dp"
                android:layout_height="145dp"
                android:layout_margin="10dp"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="26dp">

                <ImageButton
                    android:id="@+id/imageButton7"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="28dp"
                    android:contentDescription="@string/enter_how_much_cookies_you_want"
                    android:scaleType="fitCenter"
                    android:src="@drawable/zero2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

                <TextView
                    android:layout_width="226dp"
                    android:layout_height="101dp"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="28dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/zero_two"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/add7"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="230dp"
                    android:layout_marginTop="90dp"
                    android:text="@string/add_to_cart"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/image_btn8"
                android:layout_width="360dp"
                android:layout_height="145dp"
                android:layout_margin="10dp"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="26dp">

                <ImageButton
                    android:id="@+id/imageButton8"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="28dp"
                    android:contentDescription="@string/enter_how_much_cookies_you_want"
                    android:scaleType="fitCenter"
                    android:src="@drawable/zero2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

                <TextView
                    android:layout_width="226dp"
                    android:layout_height="101dp"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="28dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/zero_two"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/add8"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="230dp"
                    android:layout_marginTop="90dp"
                    android:text="@string/add_to_cart"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/sum"
            android:layout_width="295dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/zero_two"
            android:textSize="10dp"/>

        <Button
            android:id="@+id/cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:text="@string/cart"
            android:textSize="10dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>